--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
   <div class="page">
     <header>
       <div class="brand">
-        <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/a/a2/National_Football_League_logo.svg" alt="NFL">
+        //<img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/a/a2/National_Football_League_logo.svg" alt="NFL">
         <div>
-          <h1>Sleeper Helper — Fantasy NFL Checker</h1>
-          <div style="color:var(--muted);font-size:13px">Mostra titulares não-healthy e valida franquias</div>
+              <h1>Awaken</h1>
+          <div style="color:var(--muted);font-size:13px">Revisando jogadores lesionados e ligas com regras de franchise players.</div>
         </div>
       </div>
     </header>
