--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Awaken - v21 - 17SET25</title>
+  <title>Awaken - v22 - 17SET25</title>
   <style>
     body {
-      font-family: Segoe UI, Arial, sans-serif;
+      font-family: Arial, sans-serif;
       margin: 0;
       min-height: 100vh;
       display: flex;
