--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
       <!-- 1) Por usuário (agora a primeira) -->
       <div class="panel">
-        <h3>Como esão meus times em todas as ligas?</h3>
+        <h3>Como está a saúde do jogadores de todos os meus times?</h3>
         <div class="row">
           <input id="username" type="text" placeholder="Usuário Sleeper (ex: molotovpigs)" />
         </div>
@@ -167,7 +167,7 @@
 
       <!-- 2) Por League ID (agora a segunda) -->
       <div class="panel">
-        <h3>Acompanhar por League ID</h3>
+        <h3>Quais os buracos na liga que eu jogo?</h3>
         <div class="row">
           <input id="leagueId" type="text" placeholder="League ID (Ex: 1200153826695323648)" />
         </div>
@@ -201,7 +201,7 @@
 
       <!-- 4) Procurar jogadores de franquia -->
       <div class="panel">
-        <h3> Procurar Franchise Players</h3>
+        <h3> Precisando de Franchise Players? Busque aqui.</h3>
         <div class="row">
           <select id="franchiseTeamSelect"></select>
         </div>
