--- a/index.html
+++ b/index.html
@@ -230,19 +230,83 @@
     </div>
 
     <!-- COLUNA DIREITA: reservado + dark mode top -->
-    <div class="col-right">
+        <div class="col-right">
       <div style="position:sticky; top:10px; display:flex; justify-content:flex-end;">
         <button class="dark-toggle" id="darkToggle">🌙 Dark Mode</button>
-      </div>
-
-      <div style="margin-top:18px;" class="panel">
-        <h4>Utilitários</h4>
+</div>
+    <div style="margin-top:18px;" class="panel">
+    <button id="zoomIn" class="zoom-btn" title="Aumentar ( + )" aria-label="Aumentar zoom">+</button>
+    <button id="zoomOut" class="zoom-btn" title="Diminuir ( - )" aria-label="Diminuir zoom">-</button>
+    <button id="reset" class="reset-btn" title="Resetar zoom (0)" aria-label="Resetar zoom">⟳</button>
+    <div id="zoomLabel" class="zoom-label" aria-live="polite">100%</div>
+        <h4>Bye Weeks</h4>
         <div style="color:var(--muted);font-size:13px;margin-top:6px;">
-          Em breve tem novidades aqui também.
+ 
+<b>Week 5</b>
+<br>Atlanta Falcons
+<br>Chicago Bears
+<br>Green Bay Packers
+<br>Pittsburgh Steelers
+<br><br>
+
+<b>Week 6</b>
+<br>Houston Texans
+<br>Minnesota Vikings
+<br><br>
+
+<b>Week 7</b>
+<br>Baltimore Ravens
+<br>Buffalo Bills
+<br><br>
+
+<b>Week 8</b>
+<br>Arizona Cardinals
+<br>Detroit Lions
+<br>Jacksonville Jaguars
+<br>Las Vegas Raiders
+<br>Los Angeles Rams
+<br>Seattle Seahawks
+<br><br>
+
+<b>Week 9</b>
+<br>Cleveland Browns
+<br>New York Jets
+<br>Philadelphia Eagles
+<br>Tampa Bay Buccaneers
+<br><br>
+
+<b>Week 10</b>
+<br>Cincinnati Bengals
+<br>Dallas Cowboys
+<br>Kansas City Chiefs
+<br>Tennessee Titans
+<br><br>
+
+<b>Week 11</b>
+<br>Indianapolis Colts
+<br>New Orleans Saints
+<br><br>
+
+<b>Week 12</b>
+<br>Denver Broncos
+<br>Los Angeles Chargers
+<br>Miami Dolphins
+<br>Washington Commanders
+<br><br>
+
+<b>Week 14</b>
+<br>Carolina Panthers
+<br>New England Patriots
+<br>New York Giants
+<br>San Francisco 49ers       
+
         </div>
+
+
       </div>
 
     </div> <!-- fim col-right -->
+
   </div> <!-- fim page -->
 
   <footer>
