--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Awaken - v32 - 25SET25</title>
+  <title>Awaken - v33 - 02OUT25</title>
   <style>
     :root{
       --bg-left-dark: linear-gradient(90deg, rgba(10,10,10,1) 0%, rgba(40,40,40,0.9) 60%);
@@ -1278,20 +1278,20 @@ function toggleTeamBody(el){
 }
 const noticias = [
       {
-        imagem: "https://pbs.twimg.com/media/G1nCSNBW0AAYZrS?format=jpg&name=900x900", // imagem exemplo
-        alt: "Jogos Semana4 2025"
+        imagem: "https://i.ibb.co/h1LKqnrc/nflschedule-w5.jpg", // imagem exemplo
+        alt: "Jogos Semana5 2025"
       },
       {
         imagem: "https://pbs.twimg.com/media/Gq8yKxvXoAAbt1_?format=jpg&name=900x900", // imagem exemplo
         alt: "Bye Weeks 2025"
       },
       {
-        imagem: "https://i.ibb.co/RpCLNjDp/tankathon-week3.png", // imagem exemplo
-        alt: "Tankathon 2026"
+        imagem: "https://i.ibb.co/rRvV3qBH/tankathon-w5.png", // imagem exemplo
+        alt: "Tankathon 2026 - Posições semana 5"
       },
       {
-       imagem: "https://i.ibb.co/nsTgRqWr/nflstandings-week3.png", // imagem exemplo
-        alt: "Classificação até a semana 3."
+       imagem: "https://i.ibb.co/hJc0pPSH/classificacao-w4.png", // imagem exemplo
+        alt: "Classificação até a semana 4."
       }
     ];
     // -----------------------------------------------
